fix: overflow on all edit candidate pages

--- a/apps/gauzy/src/app/pages/candidates/edit-candidate/edit-candidate-profile/edit-candidate-documents/edit-candidate-documents.component.scss
+++ b/apps/gauzy/src/app/pages/candidates/edit-candidate/edit-candidate-profile/edit-candidate-documents/edit-candidate-documents.component.scss
@@ -75,6 +75,8 @@ input {
 }
 
 :host {
+  overflow-y: overlay;
+  max-height: calc(100vh - 27rem);
   nb-card {
     background-color: rgba(50, 50, 50, 0.03);
     &.document {
