--- a/apps/gauzy/src/app/pages/candidates/edit-candidate/edit-candidate-profile/edit-candidate-hiring/edit-candidate-hiring.component.scss
+++ b/apps/gauzy/src/app/pages/candidates/edit-candidate/edit-candidate-profile/edit-candidate-hiring/edit-candidate-hiring.component.scss
@@ -1,4 +1,6 @@
 :host {
+  overflow-y: overlay;
+  max-height: calc(100vh - 28rem);
   nb-card {
     background-color: rgba(50, 50, 50, 0.03);
   }
