--- a/apps/gauzy/src/app/pages/candidates/edit-candidate/edit-candidate-profile/edit-candidate-interview/edit-candidate-interview.component.scss
+++ b/apps/gauzy/src/app/pages/candidates/edit-candidate/edit-candidate-profile/edit-candidate-interview/edit-candidate-interview.component.scss
@@ -145,6 +145,8 @@
 }
 
 :host {
+  overflow-y: overlay;
+  max-height: calc(100vh - 28rem);
   nb-card,
   .custom-card-body {
     background-color: rgba(50, 50, 50, 0.03);
